--- a/index.html
+++ b/index.html
@@ -1,75 +1,51 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Extra</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buenas Prácticas de Desarrollo de Software</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link href="assets/css/estilos.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
-
-    <script src="assets/js/mijs.js"></script>
-  </head>
-
-  <body>
-    <!-- Cabecera -->
     <header>
-      <div><img src="assets/img/logoCUC.png" alt="logo Universidad" /> Buenas prácticas</div>
-      <div style="margin-left: auto">Salir</div>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#programas">Programas Académicos</a></li>
+                <li><a href="#docentes">Docentes</a></li>
+                <li><a href="#acerca">Acerca de</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- Menú izquierda -->
-    <div class="w3-sidebar w3-bar-block w3-light-grey w3-card" style="width: 160px">
-      <a href="#" class="w3-bar-item w3-button">
-        <i class="fa-solid fa-house rojoCUC"></i>
-        Inicio
-      </a>
-      <button class="w3-button w3-block w3-left-align" onclick="myAccFunc()">
-        Productos <i class="fa fa-caret-down"></i>
-      </button>
-      <div id="demoAcc" class="w3-hide w3-white w3-card">
-        <a href="pages/producto_listar.html" class="w3-bar-item w3-button">Listar</a>
-        <a href="#" class="w3-bar-item w3-button">Administrar</a>
-      </div>
+    <!-- Formulario de ingreso -->
+    <section class="ingreso-formulario">
+        <form>
+            <input type="text" placeholder="Buscar">
+        </form>
+        <button class="boton-ingresar">Ingresar</button>
+        <button class="boton-nuevo-usuario" onclick="nuevoUsuario()">Nuevo usuario</button>
+    </section>
 
-      <div class="w3-dropdown-click">
-        <button class="w3-button" onclick="myDropFunc()">Almacenes <i class="fa fa-caret-down"></i></button>
-        <div id="demoDrop" class="w3-dropdown-content w3-bar-block w3-white w3-card">
-          <a href="#" class="w3-bar-item w3-button">Agregar</a>
-          <a href="#" class="w3-bar-item w3-button">Ubicaciones</a>
-        </div>
-      </div>
-      <a href="#" class="w3-bar-item w3-button">Acerca de</a>
-      <a href="#" class="w3-bar-item w3-button"> <i class="fa-solid fa-right-from-bracket"></i> Salir </a>
-    </div>
+    <!-- Sección Sistema de Matrículas -->
+    <section class="sistema-matriculas">
+        <h2>Sistema de Matrículas</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad hic, maiores rem culpa officia nobis dolorem, accusamus placeat dolorum iste
+           possimus distinctio quibusdam voluptas dolores fuga minima veniam nostrum aliquam.</p>
 
-    <!-- Cuerpo -->
-    <div class="w3-container" style="margin-left: 160px">
-      <div>
-        <ul class="breadcrumb">
-          <li><a href="#">Inicio</a></li>
-          <li>Bienvenido</li>
-        </ul>
-      </div>
+        <!-- Botones adicionales -->
+        <button class="boton-ejemplo">Botón Ejemplo</button>
+        <button class="otro-boton">Otro Botón</button>
+    </section>
 
-      <h2>Página de inicio</h2>
-      <p>
-        I'm so tired of being here Suppressed by all my childish fears And if you have to leave I wish that you would
-        just leave 'Cause your presence still lingers here And it won't leave me alone.
-      </p>
-      <p>
-        These wounds won't seem to heal, this pain is just too real There's just too much that time cannot erase When
-        you cried, I'd wipe away all of your tears When you'd scream, I'd fight away all of your fears And I held your
-        hand through all of these years But you still have all of me You used to captivate me by your resonating light
-        Now, I'm bound by the life you left behind Your face it haunts my once pleasant dreams Your voice it chased away
-        all the sanity in me These wounds won't seem to heal, this pain is just too real There's just too much that time
-        cannot erase When you cried, I'd wipe away all of your tears When you'd scream, I'd fight away all of your fears
-        And I held your hand through all of these years And you still have all of me I've tried so hard to tell myself
-        that you're gone But though you're still with me, I've been alone, I'm alone When you cried, I'd wipe away all
-        of your tears When you'd scream, I'd fight away all of your fears I held your hand through all of these years
-        You still have all of me ah, me ah, me ah
-      </p>
-    </div>
-  </body>
+    <!-- Script para el botón "Nuevo Usuario" -->
+    <script>
+        function nuevoUsuario() {
+            // Agrega aquí el código para manejar la creación de un nuevo usuario
+            alert("Función para nuevo usuario");
+        }
+    </script>
+
+</body>
 </html>
