--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#programas">Programas Académicos</a></li>
-                <li><a href="#docentes">Docentes</a></li>
-                <li><a href="#acerca">Acerca de</a></li>
+                <li><a href="inicio.html">Inicio</a> </li>
+                <li><a href="programas.html">Programas Académicos</a></li>
+                <li><a href="docentes.html">Docentes</a></li>
+                <li><a href="acerca.html">Acerca de</a></li>
             </ul>
         </nav>
     </header>
