--- a/acerca.html
+++ b/acerca.html
@@ -45,6 +45,9 @@
             bottom: 0;
             width: 100%;
         }
+        body,header{
+    background-color: black;
+}
     </style>
 </head>
 <body>
