--- a/inicio.html
+++ b/inicio.html
@@ -47,6 +47,9 @@
         button:hover {
             background-color: #2980b9;
         }
+        body,header{
+    background-color: black;
+}
     </style>
 </head>
 <body>
