--- a/programas.html
+++ b/programas.html
@@ -53,6 +53,9 @@
             bottom: 0;
             width: 100%;
         }
+        body,header{
+    background-color: black;
+}
     </style>
 </head>
 <body>
