--- a/docentes.html
+++ b/docentes.html
@@ -54,6 +54,9 @@
             bottom: 0;
             width: 100%;
         }
+        body,header{
+    background-color: black;
+}
     </style>
 </head>
 <body>
