--- a/programas.html
+++ b/programas.html
@@ -54,7 +54,7 @@
             width: 100%;
         }
         body,header{
-    background-color: black;
+    background-color: white;
 }
     </style>
 </head>
