--- a/acerca.html
+++ b/acerca.html
@@ -46,7 +46,7 @@
             width: 100%;
         }
         body,header{
-    background-color: black;
+    background-color: white;
 }
     </style>
 </head>
