--- a/docentes.html
+++ b/docentes.html
@@ -55,7 +55,7 @@
             width: 100%;
         }
         body,header{
-    background-color: black;
+    background-color: white;
 }
     </style>
 </head>
