--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <!-- Sección Sistema de Matrículas -->
     <section class="sistema-matriculas">
         <h2>Sistema de Matrículas</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad hic, maiores rem culpa officia nobis dolorem, accusamus placeat dolorum iste
-           possimus distinctio quibusdam voluptas dolores fuga minima veniam nostrum aliquam.</p>
+        <p>"¡Bienvenido al Sistema de Matrícula en línea! 🎓
+
+            Facilitamos tu experiencia de matrícula para el próximo período académico. Descubre una variedad de cursos emocionantes y da el siguiente paso hacia tus metas educativas.</p>
 
         <!-- Botones adicionales -->
         <button class="boton-ejemplo">Botón Ejemplo</button>
