--- a/inicio.html
+++ b/inicio.html
@@ -48,7 +48,7 @@
             background-color: #2980b9;
         }
         body,header{
-    background-color: white;
+    background-color: #92BEC4;
 }
     </style>
 </head>
