--- a/acerca.html
+++ b/acerca.html
@@ -45,6 +45,29 @@
             bottom: 0;
             width: 100%;
         }
+        .container{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        button {
+            
+            background-color: #3498db;
+            color: #fff;
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #2980b9;
+        }
+        body,header{
+    background-color: #92BEC4;
+}
     </style>
 </head>
 <body>
